# orangeplayer

./: .gitignore  .gitmodules  README.md  build.gradle  build_log.txt  check-bundle-version.ps1  check-bundle.ps1  check_filename.py  clean-and-rebuild.bat  find_4ksj.py  fix-module-names.ps1  init.gradle  jitpack.yml  maven-publish.gradle  parse_torrent.py  publish-all-modules.bat  publish-gsy-modules.gradle  publish.bat  release.bat  replace-groupid.ps1  run-tv-demo.bat  settings.gradle  test-publish-all.bat  test_torrent.md
app/: build.gradle
app-legacy/: README.md  build.gradle  proguard-rules.pro
app-tv/: README.md  build.gradle  proguard-rules.pro
docs/: ALIYUN_FFMPEG_ANALYSIS.md  ANDROID_4.4_FINAL_CONCLUSION.md  ANDROID_4.4_REALITY_CHECK.md  ANDROID_4.4_SUPPORT.md  ANDROID_44_FINAL_CONCLUSION.md  ANDROID_4_COMPATIBILITY.md  API.md  API_AND_MEDIA3_UPDATE_ANALYSIS.md  CAST_GUIDE.md  CHANGELOG.md  CRASH_TOAST_FEATURE.md  EXAMPLES.md  FAQ.md  FFMPEG_CUSTOM_BUILD.md  GITHUB_APPEAL_TEMPLATE.md  GITHUB_SECRETS_SETUP.md  GIT_SUBMODULE_MANAGEMENT.md  GPG_KEY_REGENERATION.md  GPG_SETUP_GUIDE.md  GSYVIDEOPLAYER_SOURCE_MODIFICATIONS.md  HLS_FIX_SUMMARY.md  IJKPLAYER_COMPILE_GUIDE.md  IJK_BUILD_COMPLETED.md  IJK_BUILD_QUICK_START.md  IJK_BUILD_WITH_16K_PATCH.md  IJK_TIMESTAMP_ADJUSTER_SOLUTION.md  INSTALLATION.md  LOCAL_GSYVIDEOPLAYER_MIGRATION.md  MAVEN_CENTRAL_MANUAL_UPLOAD.md  MAVEN_CENTRAL_PUBLISH_SUMMARY.md  MAVEN_CENTRAL_SETUP.md  MISSING_FEATURES_CHECK.md  OCR_GUIDE.md  OPTIONAL_DEPENDENCIES.md  PLAYER_ENGINES.md  PLAYER_ENGINE_API_SUPPORT.md  PROMOTION_STRATEGY.md  PROTOCOL_ANALYSIS.md  PUBLISH_GUIDE.md  PUBLISH_LEGACY_SDK.md  (+17 more)
gradle/: base.gradle  dependencies.gradle  publish.gradle
maven-central/: CHANGELOG.md  MODULES.md  PUBLISH_GUIDE.md  README.md  public_key.asc  publish-local.bat  secring.gpg
orange-downloader/: README.md  build.gradle
orange-ffmpeg/: README.md  build.gradle  consumer-rules.pro  proguard-rules.pro
orange-ffmpeg/src/main/cpp/: CMakeLists.txt  orange_ffmpegkit_jni.c
palyerlibrary/: README.md  build.gradle  consumer-rules.pro  publish-legacy.gradle  publish-local.gradle
scripts/: PERFORMANCE_GUIDE.md  README_BUILD_FFMPEG.md  README_RTSP.md  README_TV_DEBUG.md  analyze_m3u8.py  build_ffmpeg.sh  build_ijk_official.sh  build_legacy.bat  check_compiled_so.sh  check_min_sdk.bat  compile_ffmpeg.sh  configure_android_44.bat  connect_tv.bat  copy_ijk_so_simple.sh  create-bundle.gradle  diagnose_playback_issue.bat  diagnose_tv_crash.bat  publish-module.gradle  publish-root.gradle  push_rtsp_high_quality.bat  push_rtsp_menu.bat  push_rtsp_stream.bat  push_rtsp_ultra_quality.bat  push_rtsp_with_timestamp.bat  push_rtsp_with_timestamp_fast.bat  restore_config.bat  rtsp_test_guide.bat  run_verify_and_copy.sh  setup_wsl_proxy.sh  start_rtsp_server.bat  test_local_file_playback.bat  verify_ffmpeg_source.sh  verify_ijk_alignment.sh  watch_tv_log.bat
(+390 files in other folders)
